syntax = "proto3";

package proto.example;

option go_package = "github.com/tel4vn/fins-microservices/gen/proto/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

message GetExamplesRequest {
  string keyword = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetExamplesResponse {
  string code = 1;
  string message = 2;
  repeated google.protobuf.Struct data = 3;
  int32 total = 4;
}

message GetExampleByIdRequest { string id = 1; }

message GetExampleByIdResponse {
  string code = 1;
  string message = 2;
  ExampleResponseData data = 3;
}

message ExampleResponseData {
  string id = 1;
  string example_name = 2;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message ExampleBodyRequest {
  string example_name = 2 [
    (buf.validate.field).string.min_len = 1,
    (buf.validate.field).string.max_len = 255
  ];
}

message PostExampleRequest { ExampleBodyRequest data = 1; }

message PostExampleResponse {
  string code = 1;
  string message = 2;
  google.protobuf.Struct data = 3;
  oneof error_code {
    string error = 4;
    google.protobuf.Struct errors = 5;
  }
}

message PutExampleRequest {
  string id = 1;
  ExampleBodyRequest data = 2;
}

message PutExampleResponse {
  string code = 1;
  string message = 2;
  google.protobuf.Struct data = 3;
  oneof error_code {
    string error = 4;
    google.protobuf.Struct errors = 5;
  }
}

message DeleteExampleRequest { string id = 1; }

message DeleteExampleResponse {
  string code = 1;
  string message = 2;
  google.protobuf.Struct data = 3;
}

service ExampleService {
  rpc GetExamples(GetExamplesRequest) returns (GetExamplesResponse) {
    option (google.api.http) = {
      get : "/collection/v1/example"
    };
  };

  rpc GetExampleById(GetExampleByIdRequest) returns (GetExampleByIdResponse) {
    option (google.api.http) = {
      get : "/collection/v1/example/{id}"
    };
  };

  rpc PostExample(PostExampleRequest) returns (PostExampleResponse) {
    option (google.api.http) = {
      post : "/collection/v1/example"
      body : "*"
    };
  };

  rpc PutExample(PutExampleRequest) returns (PutExampleResponse) {
    option (google.api.http) = {
      put : "/collection/v1/example/{id}"
      body : "*"
    };
  };

  rpc DeleteExample(DeleteExampleRequest) returns (DeleteExampleResponse) {
    option (google.api.http) = {
      delete : "/collection/v1/example/{id}"
    };
  };
}